<resources>
    <string name="app_name">Green Fleet</string>
    <string name="home">Home</string>
    <string name="nav_fleet">Fleet</string>
    <string name="reports">Reports</string>
    <string name="welcome_user">Welcome, Olaf</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="profilepicture">Profile picture</string>
    <string name="available_vehicle">Available vehicle</string>
    <string name="choose_vehicle">Choose vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicles">Vehicles</string>
    <string name="fleet">Fleet</string>
    <string name="arrow_to_right">arrow to right</string>
    <string name="add_item_icon">Add item icon</string>
    <string name="driver">driver</string>
    <string name="cruz_essie">Cruz, Essie</string>
    <string name="regional_sales_manager">Regional Sales Manager</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="drivers">Drivers</string>
    <string name="vehicle_search">Search for a vehicle …</string>
    <string name="driver_search">Search for a driver …</string>
    <string name="history_search">Filter</string>
    <string name="dummy_license_plate">PO 1298F</string>
    <string name="dummy_vehicle_type">BMW 318d</string>
    <string name="car_emission">135 g/km CO2</string>
    <string name="ride_start">Wien</string>
    <string name="end_ride">Prag</string>
    <string name="expand_icon">Expand icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="start_icon">Start icon</string>
    <string name="destination_icon">Destination icon</string>
    <string name="dummy_driver">Driver: Markus Rossmann</string>
    <string name="dummy_start_ride">Start: Wien, 8700 Graz, Weggasse 2</string>
    <string name="dummy_end_ride">End: Prag, 8700 Wien, Weggasse 2</string>
    <string name="dummy_distance">Distance: 116 km</string>
    <string name="dummy_ride_duration">Duration: 1h</string>
    <string name="dummy_idel">Idle: 1h</string>
    <string name="report">Report</string>
    <string name="this_month">This month</string>
    <string name="all">All</string>
    <string name="suv">SUV</string>
    <string name="cars">Cars</string>
    <string name="electro">Electro</string>
    <string name="truck">Truck</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="total_kilometers">Total kilometers</string>
    <string name="total_vehicles">Total vehicles</string>
    <string name="total_used_gas">Total used gas</string>
    <string name="total_used_kwh">Total used kWh</string>
    <string name="total_kilometers_nv">Total kilometers NV</string>
    <string name="co_u2082_emissions">CO₂ emissions</string>
    <string name="total_kilometers_ev">Total kilometers EV</string>
    <string name="co_u2082_savings_via_ev">CO₂ savings via EV</string>
    <string name="account">Account</string>
    <string name="dummy_firstname">Olaf</string>
    <string name="dummy_lastname">Schütter</string>
    <string name="dummy_vehicle_type2">Golf GTI</string>
    <string name="dummy_license_plate2">MT 1298F</string>
</resources>