<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_vehicle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/vehicle"
        android:src="@drawable/vehicle_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_license_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_license_plate"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@id/iv_ic_arrow_right"
        app:layout_constraintStart_toEndOf="@id/iv_vehicle"
        app:layout_constraintTop_toTopOf="@id/iv_vehicle" />

    <TextView
        android:id="@+id/tv_vehicle_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_vehicle_type"
        android:textColor="@color/grey"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@id/iv_ic_arrow_right"
        app:layout_constraintStart_toStartOf="@id/tv_license_plate"
        app:layout_constraintTop_toBottomOf="@id/tv_license_plate" />

    <ImageView
        android:id="@+id/iv_ic_arrow_right"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/arrow_to_right"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/iv_vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_vehicle" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_vehicle"
        app:layout_constraintTop_toBottomOf="@id/iv_vehicle" />

</androidx.constraintlayout.widget.ConstraintLayout>