<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FleetFragment">

    <TextView
        android:id="@+id/tv_fleet_heading"
        style="@style/Theme.Greenfleet.Headline"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/fleet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_nav_vehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="3dp"
        android:text="@string/vehicles"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fleet_heading" />

    <View
        android:id="@+id/vehicles_indicator"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@color/grey"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_drivers"
        app:layout_constraintStart_toStartOf="@id/btn_nav_drivers"
        app:layout_constraintTop_toBottomOf="@id/btn_nav_drivers" />

    <TextView
        android:id="@+id/btn_nav_drivers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:padding="3dp"
        android:text="@string/drivers"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btn_nav_vehicles"
        app:layout_constraintTop_toTopOf="@id/btn_nav_vehicles" />

    <SearchView
        android:id="@+id/sv_fleet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/driver_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_nav_vehicles"
        app:layout_constraintTop_toBottomOf="@id/btn_nav_vehicles" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_fleet">

        <LinearLayout
            android:id="@+id/list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

            <include layout="@layout/fleet_drivers_items" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>